# rust_template

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  README.zh-CN.md  README.zh-TW.md  TODO.md  build.rs
.devcontainer/: Dockerfile  devcontainer.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  cliff.toml  copilot-instructions.md  dependabot.yml  labeler.yml
.github/agents/: update-repo.agent.md
.github/workflows/: auto_labeler.yml  auto_review_merge.yml  build_executable.yml  build_image.yml  build_package.yml  build_release.yml  code-quality-check.yml  code_scan.yml  dependency-review.yml  deploy.yml  pre-commit-updater.yml  release_drafter.yml  semantic-pull-request.yml  test.yml
cli/: .npmignore  install.js  package.json
cli/nodejs/: package.json
cli/python/: pyproject.toml
docker/: Dockerfile
src/: lib.rs  main.rs
tests/: arithmetic.rs  basic.rs  version.rs
